8114823: G1 doesn't honor request to disable class unloading

Reviewed-by: tschatzl, mgerdin